Fix bug where module card renders weird on iOS

--- a/website/src/views/mpe/form/ModuleCard.scss
+++ b/website/src/views/mpe/form/ModuleCard.scss
@@ -78,6 +78,7 @@
   .container {
     flex-direction: column;
     padding-left: 0;
+    align-self: center;
   }
 
   .moduleType {
